--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <style>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <style>
         .bg-violet-aqua {
             background-color: #9C54D5;
         }
@@ -17,7 +18,7 @@
         .bg-accent {
             background-color: #5EE2F0;
         }
-    </style>
+    </style> -->
     <title>Home Page</title>
 </head>
 
@@ -71,7 +72,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container text-center">
                 <h1 class="display-4">Welcome to Tune Source</h1>
-                <p class="lead">Discover and download your favorite music.</p>
+                <p class="lead">Discover and download your favorite image.</p>
             </div>
         </div>
 
@@ -80,7 +81,7 @@
                 <div class="row">
                     <div class="col-lg-4 mb-4">
                         <div class="card album-card">
-                            <img src="./img/den1.png" alt="music1">
+                            <img src="./img/den1.png" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title">Nấu ăn cho em</h5>
                                 <p class="card-text">Đen</p>
@@ -91,7 +92,18 @@
                     </div>
                     <div class="col-lg-4 mb-4">
                         <div class="card album-card">
-                            <img src="./img/den1.png" alt="music1">
+                            <img src="./img/lovely1.png" alt="image">
+                            <div class="card-body">
+                                <h5 class="card-title">Lovely (with Khalid)</h5>
+                                <p class="card-text">Billie Eilish</p>
+                                <p class="card-text">Cost: $1.99</p>
+                                <a href="#" class="btn btn-primary">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-4">
+                        <div class="card album-card">
+                            <img src="./img/den1.png" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title">Nấu ăn cho em</h5>
                                 <p class="card-text">Đen</p>
@@ -102,7 +114,7 @@
                     </div>
                     <div class="col-lg-4 mb-4">
                         <div class="card album-card">
-                            <img src="./img/den1.png" alt="music1">
+                            <img src="./img/den1.png" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title">Nấu ăn cho em</h5>
                                 <p class="card-text">Đen</p>
@@ -113,7 +125,7 @@
                     </div>
                     <div class="col-lg-4 mb-4">
                         <div class="card album-card">
-                            <img src="./img/den1.png" alt="music1">
+                            <img src="./img/den1.png" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title">Nấu ăn cho em</h5>
                                 <p class="card-text">Đen</p>
@@ -124,18 +136,7 @@
                     </div>
                     <div class="col-lg-4 mb-4">
                         <div class="card album-card">
-                            <img src="./img/den1.png" alt="music1">
-                            <div class="card-body">
-                                <h5 class="card-title">Nấu ăn cho em</h5>
-                                <p class="card-text">Đen</p>
-                                <p class="card-text">Cost: $1.99</p>
-                                <a href="#" class="btn btn-primary">Buy Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 mb-4">
-                        <div class="card album-card">
-                            <img src="./img/den1.png" alt="music1">
+                            <img src="./img/den1.png" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title">Nấu ăn cho em</h5>
                                 <p class="card-text">Đen</p>
