--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <!-- Custom style -->
     <link rel="stylesheet" href="styles.css">
-
     <title>Home Page</title>
 </head>
 
 <body>
+    
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-violet-aqua">
             <div class="container">
@@ -30,28 +31,28 @@
                     </form>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Playlist</a>
+                            <a class="nav-link" href="playlist.html">Playlist</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Gift Card</a>
+                            <a class="nav-link" href="gift-card.html">Gift Card</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cart</a>
+                            <a class="nav-link" href="cart.html">Cart</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link login-button" href="#">Login</a>
+                            <a class="nav-link login-button" href="login.html">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link signup-button" href="#">Sign Up</a>
+                            <a class="nav-link signup-button" href="signup.html">Sign Up</a>
                         </li>
                     </ul>
                 </div>
@@ -146,7 +147,7 @@
     <footer>
         <div class="footer-content">
           <div class="footer-logo">
-            <a href="#"><img src="./img/Logo.png" alt="logo"></a>
+            <a href="/"><img src="./img/Logo.png" alt="logo"></a>
           </div>
           <div class="footer-links">
             <ul>
@@ -157,7 +158,7 @@
             </ul>
           </div>
         </div>
-        <p>&copy; 2023 My Music App. All rights reserved.</p>
+        <p>&copy; 2023 Tune source. All rights reserved.</p>
       </footer>
       
 
