--- a/playlist.html
+++ b/playlist.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-violet-aqua">
             <div class="container">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href=index.html>
                     <img src="./img/Logo.png" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                     Tune Source
                 </a>
@@ -31,7 +31,7 @@
                     </form>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
+                            <a class="nav-link" href=index.html>Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="playlist.html">Playlist</a>
@@ -126,7 +126,7 @@
     <footer>
         <div class="footer-content">
           <div class="footer-logo">
-            <a href="/"><img src="./img/Logo.png" alt="logo"></a>
+            <a href=index.html><img src="./img/Logo.png" alt="logo"></a>
           </div>
           <div class="footer-links">
             <ul>
