--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">Terms</a></li>
                     <li><a href="#">Privacy Policy</a></li>
